.repair-merge/repo/pkg/plugins/policies/meshratelimit/plugin/v1alpha1/testdata/zoneegress_matches_sni.listener.golden.yaml
address:
  socketAddress:
    address: 10.20.30.40
    portValue: 10002
enableReusePort: true
filterChains:
- filterChainMatch:
    serverNames:
    - sni.extsvc.default.zone-1.aws-aurora.8443
    transportProtocol: tls
  filters:
  - name: envoy.filters.network.http_connection_manager
    typedConfig:
      '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
      httpFilters:
      - name: envoy.filters.http.local_ratelimit
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.filters.http.local_ratelimit.v3.LocalRateLimit
          statPrefix: rate_limit
      - name: envoy.filters.http.router
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
      internalAddressConfig:
        cidrRanges:
        - addressPrefix: 127.0.0.1
          prefixLen: 32
        - addressPrefix: ::1
          prefixLen: 128
      routeConfig:
        name: outbound:mes-http
        requestHeadersToAdd:
        - header:
            key: x-kuma-tags
            value: '&kuma.io/service=web&'
        validateClusters: false
        virtualHosts:
        - domains:
          - '*'
          name: mes-http
          routes:
          - match:
              prefix: /
            name: 9Zuf5Tg79OuZcQITwBbQykxAk2u4fRKrwYn3//AL4Yo=
            route:
              cluster: mes-http
              timeout: 0s
            typedPerFilterConfig:
              envoy.filters.http.local_ratelimit:
                '@type': type.googleapis.com/envoy.extensions.filters.http.local_ratelimit.v3.LocalRateLimit
                filterEnabled:
                  defaultValue:
                    numerator: 100
                  runtimeKey: local_rate_limit_enabled
                filterEnforced:
                  defaultValue:
                    numerator: 100
                  runtimeKey: local_rate_limit_enforced
                statPrefix: rate_limit
                tokenBucket:
                  fillInterval: 5s
                  maxTokens: 50
                  tokensPerFill: 50
      statPrefix: mes-http
  name: mes-http
name: self_zoneegress_dp_ze-port
trafficDirection: INBOUND
